trying to fix contrast error

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ html{
   }
 
 .home{
-color: gray;
+color: white;
 font-size: 20px;
 grid-column: 1/-1; 
 grid-row:3/4;  
